--- a/src/pages/cart/cart.css
+++ b/src/pages/cart/cart.css
@@ -37,3 +37,22 @@
 .summary {
   width: 30%;
 }
+
+.numInput {
+  width: 50px;
+  height: 30px;
+  margin: 20px;
+  border-radius: 5px;
+  font-size: 18px;
+}
+
+.prodValues {
+  margin-left: 20px;
+}
+.editBtn {
+  margin: 10px;
+}
+
+.deleteBtn {
+  margin: 10px;
+}
